# power_house

./: .gitignore  ATTRIBUTION.md  CNAME  Cargo.toml  Dockerfile  JULIAN_PROTOCOL.md  LICENSE  LICENSE-CHANGE.md  LICENSE_HEADER.txt  NOTICE  README.md  RELEASE_NOTES.md  app-v0324.js  app-v0327.js  app-v0330.js  app-v0332.js  app-v0334.js  app.css  app.js  blob_policy.json  bootstrap.js  campaign.css  campaign.html  campaign.js  docker-compose.yml  index.html  powerhouse-boot1.service  powerhouse-boot2.service  register.css  register.html  register.js  slbit.css  slbit.html  slbit.js  status.html  stream-buffer.js
.github/ISSUE_TEMPLATE/: technical-evaluation.yml
.github/workflows/: ci.yml  pages.yml  release-gate.yml
LICENSES/: BSD-2-Clause.txt  MIT.txt
artifacts/: sparse_record_v1.json
benchmarks/: README.md
benchmarks/v0.3.0/: report.json
benchmarks/v0.3.2/: rpc-report.json
configs/: governance.multisig.json  governance.stake.json  multisig_state.json  network.json  stake_state.json
conformance/identity-v1/: identity-valid.json  manifest.json  replay-valid.json  rootprint-valid.json
conformance/pha-v1/: core-valid.pha  core-with-epa.pha  manifest.json  rootprint-valid.json
conformance/slbit-v1/: manifest.json  observatory-valid.json
conformance/v1/: committed-valid.phcp  committed-valid.phsm  manifest.json  seeded-valid.phsp
contracts/: PowerHouseToken.sol
contrib/grafana/: jroc_net_dashboard.json  mfenx_powerhouse_dashboard.json
docs/: README.md  book_of_power.md  book_of_power.tex  bounty_policy.md  committed_workload.md  community_onboarding.md  hyperscale_proof.md  identity.md  incident_response.md  load_testing.md  mainnet_launch.md  memory_capsule.md  memory_cli.md  memory_conformance.md  network_roadmap.md  node_operator.md  observer_registry.md  ops.md  orbital_observatory.md  permissionless_join.md  pha_spec.md  prior_art_review.md  production_rpc_deployment.md  promotion_pack.md  provenance_security.md  reliability_campaign.md  research_claim.md  research_protocol.md  roadmap_v0.1.54.md  rootprint.md  rpc_operations.md  sdk.md  security_model.md  sextillion_proof.md  sfcs.md  sfcs_zkvm.md  slbit.md  soundness_and_scope.md  sparse_record.md  stake_state.json  (+6 more)
examples/: committed_workload.rs  conformance_vectors.rs  crt_chain.rs  demo.rs  general_sumcheck.rs  hash_pipeline.rs  hyperscale_affine.rs  identity_conformance_vectors.rs  identity_create.rs  identity_equivalent.rs  identity_fork.rs  identity_merge.rs  identity_replay.rs  mega_sumcheck.rs  pha_conformance_vectors.rs  rootprint_benchmark.rs  rootprint_workflow.rs  scale_sumcheck.rs  sextillion_verify.rs  slbit_conformance_vectors.rs  slbit_observatory.rs  sparse_record.rs  verify_logs.rs
funding_service/: Cargo.toml
funding_service/src/: main.rs
infra/: .gitignore  governance.json  ops_hosts.example.toml  stake_state.json
infra/digitalocean/: cloud-init.yaml
infra/monitoring/: alert_receiver.py  alertmanager.yml  blackbox.yml  grafana-dashboard.yml  nginx-mfenx-rpc.conf  observer_intake.py  observer_registry.py  powerhouse-alert-receiver.service  powerhouse-alerts.yml  powerhouse-observer-intake.service  powerhouse-observer-registry.service  powerhouse-observer-registry.timer  powerhouse-status-api.service  powerhouse-validator-registry.service  powerhouse-validator-registry.timer  prometheus.yml  reliability_campaign.py  status_api.py  validator_registry.py
infra/ops/: alert.sh  backup.sh  deploy_release.sh  healthcheck.py  journal_export.sh  metrics_snapshot.sh  restore.sh  rollback.sh
infra/scripts/: powerhouse-boot.sh
infra/systemd/: powerhouse-backup@.service  powerhouse-backup@.timer  powerhouse-boot1.env.example  powerhouse-boot1.service  powerhouse-boot2.env.example  powerhouse-boot2.service  powerhouse-common.env.example  powerhouse-healthcheck@.service  powerhouse-healthcheck@.timer  powerhouse-log-export@.service  powerhouse-log-export@.timer  powerhouse-metrics@.service  powerhouse-metrics@.timer  powerhouse-node@.service  powerhouse-observer-boot.env.example  (+3 more)
power-house/: index.html
publicpower/: ATTRIBUTION.md  CNAME  app-v0320.js  app-v0323.js  app-v0324.js  app-v0325.js  app-v0326.js  app-v0328.js  app-v0329.js  app-v0331.js  app-v0333.js  app.css  app.js  campaign.css  campaign.html  campaign.js  index.html  observatory.css  register.css  register.html  register.js  slbit.css  slbit.html  slbit.js  status.css  status.html  status.js
scripts/: benchmark_sparse.py  benchmark_v030.py  build_migration_claims.sh  build_powerhouse_token_artifact.sh  check_release_consistency.py  check_rpc.py  check_rustdoc_links.py  deploy_monitoring_stack.sh  deploy_powerhouse_token.py  deploy_rpc_cluster.sh  deploy_units.sh  digitalocean_rpc_preflight.sh  fault_test.sh  gcp_rpc_preflight.sh  generate_rpc_cluster.py  install_reliability_campaign.sh  load_test.sh  netctl.py  provision_digitalocean_rpc.sh  rpc_load_test.py  scale_net.sh  smoke_net.sh  soundness_budget.py  stop_scale_net.sh  test_cli.sh  test_digitalocean_provision.sh  test_generate_rpc_cluster.py  test_native_rpc_cluster.sh  test_observatory_contract.py  test_observatory_stream.mjs  test_observer_intake.py  test_observer_registry.py  test_reliability_campaign.py  test_rpc_check.py  test_sparse_verifier.py  test_status_registry.py  test_validator_registry.py  token_migration_dry_run.sh  verify_migration_contract.sh  verify_sparse_certificate.py
sdk/python/: README.md  pyproject.toml
sdk/python/power_house/: __init__.py  core.py  external.py
sdk/python/tests/: test_sdk.py
src/: alien.rs  consensus.rs  data.rs  economics.rs  field.rs  io.rs  julian.rs  lib.rs  log_parser.rs  merkle.rs  multilinear.rs  observatory.rs  prng.rs  rollup.rs  sparse_sumcheck.rs  streaming.rs  sumcheck.rs  transcript.rs
tessaryn/: index.html
tests/: identity_cli.rs  memory_capsule.rs  memory_cli.rs  observatory_cli.rs  observatory_protocol.rs  provenance_protocol.rs  rootprint_cli.rs  sfcs.rs  sfcs_cli.rs  sfcs_compiler.rs  sfcs_public_compiler.rs  sfcs_vm.rs  sfcs_vm_constraints.rs  sfcs_zk.rs  sparse_protocol.rs
(+60 files in other folders)
