[package]
name = "power_house"
version = "0.1.52"
edition = "2021"
authors = ["Julian Christian Sanders <lexluger.dev@proton.me>"]


readme = "README.md"

 
license-file = "LICENSE"

 
documentation = "https://docs.rs/power_house"

description = "power_house provides deterministic sum-check proofs, finite-field arithmetic, transcript logging, and quorum ledger tooling for transparent verification in Rust."
keywords = ["cryptography", "proofs", "sum-check", "ledger", "education"]
categories = ["cryptography", "algorithms", "mathematics"]

 
include = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "JULIAN_PROTOCOL.md",
  "docs/book_of_power.md",
  "src/**",
  "examples/**"
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
net = [
    "dep:base64",
    "dep:ed25519-dalek",
    "dep:futures",
    "dep:libp2p",
    "dep:once_cell",
    "dep:rand_core",
    "dep:rpassword",
    "dep:tokio",
    "dep:thiserror",
    "dep:reed-solomon-erasure",
]

[dependencies]
ark-crypto-primitives = { version = "0.4", features = ["crh", "merkle_tree", "r1cs"] }
ark-ed-on-bn254 = { version = "0.4", features = ["r1cs"] }
ark-ff = "0.4"
ark-serialize = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-r1cs-std = { version = "0.4", features = ["std"] }
ark-relations = "0.4"
hex = "0.4"
rand = "0.8"
reed-solomon-erasure = { version = "6", optional = true }
blake2 = "0.10"
base64 = { version = "0.21", optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
futures = { version = "0.3", optional = true }
libp2p = { version = "0.53", default-features = false, features = [
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "noise",
    "tcp",
    "tokio",
    "yamux",
], optional = true }
once_cell = { version = "1", optional = true }
rand_core = { version = "0.6", optional = true }
rpassword = { version = "7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "net", "io-util"], optional = true }
thiserror = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
