[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "power-house-sdk"
version = "0.3.19"
description = "Zero-dependency Python SDK for Power House identities, Archive, and Rootprint v1"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "MFENX LLC" }]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["power_house*"]
